flux/apps/pollster/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pollster

spec:
  selector:
    matchLabels:
      app: pollster

  template:
    metadata:
      labels:
        app: pollster

    spec:
      volumes:
        - name: database
          persistentVolumeClaim:
            claimName: database

      containers:
        - name: pollster
          image: ghcr.io/nint8835/pollster
          args: [ "start" ]

          volumeMounts:
            - mountPath: /data
              name: database

          ports:
            - containerPort: 8000
              name: http
              protocol: TCP

          livenessProbe:
            httpGet:
              path: /
              port: http

          readinessProbe:
            httpGet:
              path: /
              port: http

          resources:
            requests:
              memory: "128Mi"
            limits:
              memory: "192Mi"
