flux/apps/pollster/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: pollster

spec:
  selector:
    app: pollster

  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
