flux/apps/pollster/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pollster
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: traefik-https-redirect@kubernetescrd

spec:
  tls:
    - hosts:
        - pollster.bootleg.technology
      secretName: pollster-bootleg-technology
  rules:
    - host: pollster.bootleg.technology
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pollster
                port:
                  name: http
